# sodetlib

./: .gitattributes  .gitignore  Dockerfile  MANIFEST.in  README.md  README.rst  detlib_plot_style.mplstyle  dev_cfg.yaml  docker-compose.yml  pyproject.toml  requirements.txt  resonator_fitting.py  setup.cfg  setup.py
.github/workflows/: build-test.yaml  deploy.yml  publish.yaml  test-sphinx-build.yml
docs/: Makefile  analysis.rst  build_docs.sh  conf.py  configs.rst  det_config.rst  index.rst  interactive_setup.rst  module_overview.rst  noise.rst  requirements.txt  resonator_fitting.rst  scripting_guide.rst  smurf_funcs.rst  stream.rst
docs/operations/: bias_steps.rst  biasstep_rebias.rst  complex_impedance.rst  iv.rst  setup.rst  squid_curves.rst
hammers/: jackhammer  run_gui.sh
hammers/load_pcie_fw/: README.md  docker-compose.yml  download_fw.sh
hammers/scripts/: setup_pysmurf.py  start_pysmurf_ipython.py
scratch/: README.md  analyze_noise_psd.py  dev_cfg.yaml  find_bands.py  full_band_response_AMCatten.py  health_check.py  noise_vs_temp.py  optimize_noise_per_band.py  resonator_fitting.py  run_tuning.py  sodetlib_make_parsers_from_function_defs.py  test_analyze_tickle.py  tickle_tes.py  tune_and_optimize.py
scratch/chw3k5/: noise_by_band.py  noise_stack_by_band.py  ufm_optimize.ipynb
scratch/ddutcher/: noise_stack_by_band.py  optimize_fracpp.py  psatvstemp_analysis.py  setup_and_optimize.py  tes_yield_devel.py  uc_tuner.py  ufm_biasstep_loop.py  ufm_biasstep_sodetlib.py  ufm_noise_in_transition.py  umm_optimize.py  uxm_relock.py  (+3 more)
scripts/: calc_r_tickle.py  clear_old_data.py  dump_rogue_state.py  find_bands.py  find_subbands.py  fit_squid_data.py  health_check.py  optimize_lms_gain.py  optimize_noise_per_band.py  optimize_tracking.py  optimize_uc_atten.py  res_shift.py  res_shift_vs_flux_and_att.py  resonator_fitting.py  resonator_model.py  restart_rssi.py  run_serial_algs.py  run_tuning.py  set_stream.py  setup_pysmurf.py  start_pysmurf_ipython.py  take_dc_squid_curve.py  tickle_and_analyze.py  tracking_quality.py  tune_and_optimize.py  uxm_setup.py
server_scripts/: run_gui.sh  setup_pysmurf.py  start_pysmurf_ipython.py
sodetlib/: __init__.py  _version.py  constants.py  det_config.py  noise.py  quality_control.py  resonator_fitting.py  smurf_funcs.py  stream.py  tes_param_correction.py  util.py
tests/: test_det_config.py
(+561 files in other folders)
