[build-system]
requires = [
    "hatch-vcs",
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "sodetlib"
dynamic = ["version"]
description = "SODETLIB"
readme = "README.md"
dependencies = [
    "lmfit",
    "matplotlib",
    "numpy",
    "pandas",
    "PyYAML",
    "scipy",
    "tqdm",
]

[tool.hatch.version]
source = "vcs"

# closest scheme to versioneer behavior, avoids auto-incremented version number
# https://setuptools-scm.readthedocs.io/en/latest/usage/#default-versioning-scheme
[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "sodetlib/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/sodetlib",
]
