[build-system]
requires = [
    "hatch-vcs",
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "sodetlib"
dynamic = ["version"]
description = "Simons Observatory detector readout library."
readme = "README.rst"
license = "BSD-2-Clause"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "lmfit",
    "matplotlib",
    "numpy",
    "pandas",
    "PyYAML",
    "scipy",
    "tqdm",
]

[project.scripts]
jackhammer = "sodetlib.hammers.jackhammer:main"

[project.urls]
"Bug Tracker" = "https://github.com/simonsobs/sodetlib/issues"
Documentation = "https://sodetlib.readthedocs.io"
Homepage = "https://github.com/simonsobs/sodetlib"
"Source Code" = "https://github.com/simonsobs/sodetlib"

[tool.hatch.version]
source = "vcs"

# closest scheme to versioneer behavior, avoids auto-incremented version number
# https://setuptools-scm.readthedocs.io/en/latest/usage/#default-versioning-scheme
[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "sodetlib/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/sodetlib",
]
